# PoweredAI-RBAC

./: .dockerignore  .env  .gitignore  Dockerfile  ML_PERMISSION_RECOMMENDER_VI.md  README.md  X_test.csv  Y_test.csv  api.py  api_tests.postman_collection.json  api_tests.ps1  audit_logs.csv  audit_logs_v2.csv  emr_authz.rego  permission_recommender.pkl  permissions.csv  pyproject.toml  requirements.txt  role_permissions.csv  role_permissions_unique.csv  roles.csv  training_output.txt  user_additional_permissions.csv  user_additional_permissions_v2.csv  user_assigned_patients.csv  user_assigned_patients_v2.csv  users.csv  users_v2.csv
src/policy/: train.py
tests/: create_data_set.py  create_data_set_v2.py  test_basic.py
